
plugins {
    id 'java-library'
	id 'biz.aQute.bnd.builder'
	id 'ivy-publish'
}

repositories {
	mavenCentral()
    ivy {
        url 'file:///home/michael/Java/ivy/repositories/local'
    }
 }

publishing {
	repositories {
    	ivy {
        	url 'file:///home/michael/Java/ivy/repositories/local'
    	}
 	}
 	publications {
    	ivy(IvyPublication) {
	    	from components.java
     	}
	}
}

dependencies {
	compileOnly group: 'commons-logging', name: 'commons-logging', version: '1.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
	testRuntimeOnly group: 'commons-logging', name: 'commons-logging', version: '1.2'
}  

test {
    useJUnitPlatform()
}

group = 'org.dbdoclet'
version = '9.0'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
